More updates to mobile alignment issues on 6 plus

--- a/css/main.css
+++ b/css/main.css
@@ -626,6 +626,7 @@ header {
     background: #fff;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
     padding: 20px 30px;
+    margin-top: 30px;
     text-align: left; }
     header .card:last-child {
       margin-right: 0; }
@@ -637,7 +638,8 @@ header {
         width: 65.8807828007%;
         margin-left: 34.1192171993%;
         position: relative;
-        padding: 60px 90px; }
+        padding: 60px 90px;
+        margin-top: 0px; }
         header .card:last-child {
           margin-right: 0; } }
     header .card svg {
@@ -901,7 +903,7 @@ header {
     margin-left: 8.5298042998%;
     background: #FFFFFF;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.3);
-    padding: 30px;
+    padding: 70px 20px 0px 20px;
     position: relative;
     margin-bottom: 8rem; }
     .calendar .card:last-child {
@@ -957,11 +959,11 @@ header {
     .calendar .card .date p {
       color: #00a1df; }
     .calendar .card button {
-      position: absolute;
-      top: 160px;
-      right: 80px;
+      position: relative;
+      top: 30px;
       width: 150px;
       height: 60px;
+      margin: 0 auto;
       background: #f65097;
       color: #fff;
       font-family: "PT Sans", sans-serif;
@@ -970,6 +972,7 @@ header {
       border: none; }
       @media only screen and (min-width: 768px) {
         .calendar .card button {
+          position: absolute;
           top: 100px;
           right: 40px;
           width: 150px; } }
@@ -1067,21 +1070,22 @@ header {
           .blog .card .blog-content .line {
             margin-bottom: 3rem; } }
       .blog .card .blog-content button {
-        position: absolute;
-        top: 440px;
-        right: 80px;
+        position: relative;
+        top: 60px;
         width: 150px;
         height: 60px;
+        margin: 0 auto;
         background: #f65097;
         color: #fff;
         font-family: "PT Sans", sans-serif;
         font-size: 1.7rem;
-        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.3); }
+        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.3);
+        border: none; }
         @media only screen and (min-width: 768px) {
           .blog .card .blog-content button {
+            position: absolute;
             top: 470px;
-            right: 40px;
-            width: 150px; } }
+            right: 40px; } }
 
 body {
   /* prevent ie from showing the horizontal scrollbar */
