--- a/scss/partials/_process.scss
+++ b/scss/partials/_process.scss
@@ -111,7 +111,9 @@
           @include MQ(M) {
             display: block;
           }
-          a {@include button;}
+          a {
+            @include button;
+          }
           .quote {
             margin-bottom: 10px;
           }
