--- a/scss/partials/calendar.scss
+++ b/scss/partials/calendar.scss
@@ -17,7 +17,7 @@
     @include shift(1);
     background: #FFFFFF;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
-    padding: 30px;
+    padding: 70px 20px 0px 20px;
     position: relative;
     margin-bottom: 8rem;
     @include MQ(M) {
@@ -49,11 +49,11 @@
       p {color: $blue-pants;}
     }
     button {
-      position: absolute;
-      top: 160px;
-      right: 80px;
+      position: relative;
+      top: 30px;
       width: 150px;
       height: 60px;
+      margin: 0 auto;
       background: $doughnut;
       color: $snow;
       font-family: $primary-font;
@@ -61,6 +61,7 @@
       box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
       border:none;
       @include MQ(M) {
+        position: absolute;
         top: 100px;
         right: 40px;
         width: 150px;
